--- a/index.html
+++ b/index.html
@@ -1,1 +1,168 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Mark Gallagher's Resume</title>
+        <link rel="icon" type="image/x-icon" href="C:\Users\megallagher\Desktop\Data Engineering\Web Development\assets\img\Resume Photo.jpg" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="C:\Users\megallagher\Desktop\Data Engineering\Web Development\styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-block d-lg-none">Mark Gallagher</span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="C:\Users\megallagher\Desktop\Data Engineering\Web Development\assets\img\Resume Photo.jpg" alt="..." /></span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills & Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Projects</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Page Content-->
+        <div class="container-fluid p-0">
+            <!-- About-->
+            <section class="resume-section" id="about">
+                <div class="resume-section-content">
+                    <h1 class="mb-0">
+                        Mark
+                        <span class="text-primary">Gallagher</span>
+                    </h1>
+                    <div class="subheading mb-5">
+                        Northern Liberties · Philadelphia, PA 19123 · (302) 415-9494 ·
+                        <a href="mailto:mgalmrk@gmail.com">mgalmrk@gmail.com</a>
+                    </div>
+                    <p class="lead mb-5">I'm a University of Delaware graduate and licensed CPA in the state of Pennsylvania with interests in data analytics and process automation.</p>
+                    <div class="social-icons">
+                        <a class="social-icon" href="https://www.linkedin.com/in/mark-gallagher-cpa-6b6840128/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/MarkEGallagher"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Experience-->
+            <section class="resume-section" id="experience">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Accounting Advisory and Data Solutions Associate</h3>
+                            <div class="subheading mb-3">KPMG</div>
+                            <p>Worked on carve-outs of business units for two Fortune 500 companies. On these jobs I've owned major workstreams such a revenue (ASC 606), leases (ASC 842), intangible assets, and more. I have also had the chance to work with KPMG's Data Solutions team, where I utilized Alteryx to create repeatable workflows to standardize data preparation, SQL to query relevant data from our company's SQL server, and VBA to automate repeatable processes performed in Microsoft Excel .</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Assurance Associate</h3>
+                            <div class="subheading mb-3">EY</div>
+                            <p>Performed planning tasks, interim substantive testing, year-end substantive testing, and tests of controls for audits of private and large public biotech and utilities companies. Some of the workstreams that I owned include testing of: cash, AR, AP, inventory, SG&A expense, ST and LT debt, and equity. While in this role, I also had the chance to work as a Digital Advisor, where I utilized internal tools to produce analytics that proved correlation between certain accounts and reduced required substantive testing over those accounts.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2020 - October 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">TA - Python for Data Analysis</h3>
+                            <div class="subheading mb-3">University of Delaware</div>
+                            <p>Helped undergrate students learn the basics of Python and its capabilities when it comes to analyzing data. In this course, students used Numpy arrays, Pandas dataframes, and matplotlib visualizations to aid in their analyses.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2019 - December 2019</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Education-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Education</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">University of Delaware</h3>
+                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <div>Management Information Systems and Accounting</div>
+                            <p>GPA: 3.92</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2016 - May 2020</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Salesianum High School</h3>
+                            <div class="subheading mb-3">Student Council President</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2012 - May 2016</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Skills-->
+            <section class="resume-section" id="skills">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Skills and Certifications</h2>
+                    <div class="subheading mb-3">Programming Languages & Tools:</div>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><img class = "otherimages" src ="https://cdn-icons-png.flaticon.com/128/174/174854.png" width = "50" height ="50"></li>
+                        <li class="list-inline-item"><img class = "otherimages" src ="https://cdn-icons-png.flaticon.com/128/732/732190.png" width = "50" height ="50"></li>
+                        <li class="list-inline-item"><img class = "otherimages" src ="https://cdn-icons-png.flaticon.com/128/5968/5968350.png" width = "50" height ="50"></li>
+                        <li class="list-inline-item"><img class = "otherimages" src ="https://cdn-icons-png.flaticon.com/128/2772/2772128.png" width = "50" height ="50"></li>
+                        <li class="list-inline-item"><img class = "otherimages" src ="https://tse2.mm.bing.net/th/id/OIP.Qc3HEqz74AgvnzoJCjlKfQHaHV?w=176&h=180&c=7&r=0&o=5&pid=1.7" width = "50" height ="50"></li>
+                        <li class="list-inline-item"><img class = "otherimages" src ="https://tse3.mm.bing.net/th/id/OIP.x8SKv5lbXFW4ntY6OAGlKAHaHa?w=159&h=180&c=7&r=0&o=5&pid=1.7" width = "50" height ="50"></li>
+                        <li class="list-inline-item"><img class = "otherimages" src ="https://tse3.mm.bing.net/th/id/OIP.IWbbmwKARspF8sLUQGLFuwHaFj?w=225&h=180&c=7&r=0&o=5&pid=1.7" width = "75" height ="50"></li>
+                    </ul>
+                    <div class="subheading mb-3">Certifications:</div>
+                    <ul class="subheading mb-3">
+                        <li class="subheading mb-3">Certified Public Accountant - PA</li>
+                        <li class="subheading mb-3">Alteryx Designer Core Certified</li>
+                    </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Awards-->
+            <section class="resume-section" id="awards">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Projects</h2>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fa-brands fa-python"></i></span>
+                            LinkedIn Job Webscraping
+                            <ul>
+                                <li>Python Code that logs into your LinkedIn account using Selenium and scrapes recommended job data using Beautiful Soup. The data is then cleansed and an additional column is added that states whether each job contains "data" in the title. The result is a list of jobs and relevant data in a csv file. <a class="social-icon" href="https://github.com/MarkEGallagher/LinkedIn_Webscraping"><i class="fab fa-github"></i></a></li>
+                            </ul>  
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-brands fa-python"></i></span>
+                            NBA MVP Predictor
+                            <ul>
+                                <li>Python Code that reads a csv file containing NBA player statistics, as well as MVP data scraped from the internet using Beautiful Soup and uses that data to train a logistic regression model (set up using Scikit-Learn) to predict future MVP candidates. <a class="social-icon" href="https://github.com/MarkEGallagher/NBA_MVP"><i class="fab fa-github"></i></a></li>
+                            </ul>   
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fa-brands fa-python"></i></span>
+                            76ers Twitter Search Sentiment Analysis
+                            <ul>
+                                <li>Python Code that logs into your Twitter account and searches for the Phildelphia 76ers using Selenium, scrapes tweet data using Beautiful Soup, and performs sentiment analysis over each tweet using Vader in order to determine whether it has a positive, negative, or neutral connotation. <a class="social-icon" href="https://github.com/MarkEGallagher/Twitter_Sentiment_Analysis"><i class="fab fa-github"></i></a></li>
+                            </ul>   
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="C:\Users\megallagher\Desktop\Data Engineering\Web Development\scripts.js"></script>
+    </body>
+</html>
