--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Accounting Advisory and Data Solutions Associate</h3>
                             <div class="subheading mb-3">KPMG</div>
-                            <p>Worked on carve-outs of business units for two Fortune 500 companies. On these jobs I've owned major workstreams such a revenue (ASC 606), leases (ASC 842), intangible assets, and more. I have also had the chance to work with KPMG's Data Solutions team, where I utilized Alteryx to create repeatable workflows to standardize data preparation, SQL to query relevant data from our company's SQL server, and VBA to automate repeatable processes performed in Microsoft Excel .</p>
+                            <p>Worked on carve-outs of business units for two Fortune 500 companies. On these jobs I've owned major workstreams such as revenue (ASC 606), leases (ASC 842), intangible assets, and more. I have also had the chance to work with KPMG's Data Solutions team, where I utilized Alteryx to create repeatable workflows to standardize data preparation, SQL to query relevant data from our company's SQL server, and VBA to automate repeatable processes performed in Microsoft Excel .</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2021 - Present</span></div>
                     </div>
