--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Accounting Advisory and Data Solutions Associate</h3>
+                            <h3 class="mb-0">AAS Data Solutions Senior Associate</h3>
                             <div class="subheading mb-3">KPMG</div>
-                            <p>Worked on carve-outs of business units for two Fortune 500 companies. On these jobs I've owned major workstreams such as revenue (ASC 606), leases (ASC 842), intangible assets, and more. I have also had the chance to work with KPMG's Data Solutions team, where I utilized Alteryx to create repeatable workflows to standardize data preparation, SQL to query relevant data from our company's SQL server, and VBA to automate repeatable processes performed in Microsoft Excel .</p>
+                            <p>As an AAS Data Solutions team member, I work with Alteryx to create repeatable workflows to standardize data preparation, SQL to query relevant data from our company's SQL server, VBA to automate repeatable processes performed in Microsoft Excel, and much more. In addition, I have had the opportunity to participate in KPMG's Data Citizens With Purpose program, a program that helps non-profit companies to draw valuable insights from their data by using Alteryx to clean the data and Power BI to create meaningful visualizations.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2021 - Present</span></div>
                     </div>
@@ -126,6 +126,13 @@
                     <ul class="subheading mb-3">
                         <li class="subheading mb-3">Certified Public Accountant - PA</li>
                         <li class="subheading mb-3">Alteryx Designer Core Certified</li>
+                            <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="3ef71c4e-c4f1-4270-9d93-1af6bb97296e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
+                            <li class="subheading mb-3">Microsoft Certified: Azure Fundamentals</li>
+                            <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5937320a-0a72-4cbf-82f2-c728f0feef17" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
+                            <li class="subheading mb-3">Microsoft Certified: Azure Data Fundamentals</li>
+                            <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="dc65a869-1b94-4c8b-afd4-7f2778edd048" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
+                            <li class="subheading mb-3">Microsoft Certified: Azure AI Fundamentals</li>
+                            <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="8442589b-6f21-4377-9f1a-bf9ae4198bb9" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
                     </ul>
                 </div>
             </section>
