--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </section>
             <hr class="m-0" />
             <!-- Skills-->
-            <section class="resume-section" id="skills">
+            <section class="resume-section" id="skillsandcerts">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills and Certifications</h2>
                     <div class="subheading mb-3">Programming Languages & Tools:</div>
@@ -126,19 +126,19 @@
                     <ul class="subheading mb-3">
                         <li class="subheading mb-3">Certified Public Accountant - PA</li>
                         <li class="subheading mb-3">Alteryx Designer Core Certified</li>
-                            <ul list-style: none><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="3ef71c4e-c4f1-4270-9d93-1af6bb97296e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
+                            <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="3ef71c4e-c4f1-4270-9d93-1af6bb97296e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
                             <li class="subheading mb-3">Microsoft Certified: Azure Fundamentals</li>
-                            <ul list-style: none><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5937320a-0a72-4cbf-82f2-c728f0feef17" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
+                            <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5937320a-0a72-4cbf-82f2-c728f0feef17" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
                             <li class="subheading mb-3">Microsoft Certified: Azure Data Fundamentals</li>
-                            <ul list style: none><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="dc65a869-1b94-4c8b-afd4-7f2778edd048" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
+                            <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="dc65a869-1b94-4c8b-afd4-7f2778edd048" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
                             <li class="subheading mb-3">Microsoft Certified: Azure AI Fundamentals</li>
-                            <ul list style: none><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="8442589b-6f21-4377-9f1a-bf9ae4198bb9" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
+                            <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="8442589b-6f21-4377-9f1a-bf9ae4198bb9" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
                     </ul>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                     <ul class="fa-ul mb-0">
