Update Advanced Cert

--- a/index.html
+++ b/index.html
@@ -125,15 +125,17 @@
                     <div class="subheading mb-3">Certifications:</div>
                     <ul class="subheading mb-3">
                         <li class="subheading mb-3">Certified Public Accountant - PA</li>
+                        <li class="subheading mb-3">Altyerx Designer Advanced Certified</li>
+                            <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="8a5b928e-0952-4e8d-b473-b73a1cc63887" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
                         <li class="subheading mb-3">Alteryx Designer Core Certified</li>
                             <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="3ef71c4e-c4f1-4270-9d93-1af6bb97296e" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
-                            <li class="subheading mb-3">Microsoft Certified: Azure Fundamentals</li>
+                        <li class="subheading mb-3">Microsoft Certified: Azure Fundamentals</li>
                             <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5937320a-0a72-4cbf-82f2-c728f0feef17" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
-                            <li class="subheading mb-3">Microsoft Certified: Azure Data Fundamentals</li>
+                        <li class="subheading mb-3">Microsoft Certified: Azure Data Fundamentals</li>
                             <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="dc65a869-1b94-4c8b-afd4-7f2778edd048" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
-                            <li class="subheading mb-3">Microsoft Certified: Azure AI Fundamentals</li>
+                        <li class="subheading mb-3">Microsoft Certified: Azure AI Fundamentals</li>
                             <ul><li><div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="8442589b-6f21-4377-9f1a-bf9ae4198bb9" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script></li></ul>
-                    </ul>
+                     </ul>
                 </div>
             </section>
             <hr class="m-0" />
